# otus_learning

./: .gitignore  LICENSE  README.md
homework_1/: CMakeLists.txt  hello_world.cpp  move_me_out.cpp  move_me_out.h
homework_3/: CMakeLists.txt  main.cpp  rating_table.txt
homework_4/: Ball.cpp  Ball.hpp  Physics.cpp  World.cpp
homework_5/: CMakeLists.txt  statictic.cpp  statictic.h  statictic.i  statictic.s
homework_6/: CMakeLists.txt  IList.hpp  main.cpp
homework_7/: CMakeLists.txt  IContainer.h  IList.hpp  IVector.hpp  main.cpp
homework_7/test/: IList_tests.cpp  IVector_tests.cpp
homework_8/: main.cpp
homework_9/: CMakeLists.txt  topk_words.cpp
